--- a/vignettes/RegionsOfInterest.Rmd
+++ b/vignettes/RegionsOfInterest.Rmd
@@ -26,10 +26,10 @@ suppressPackageStartupMessages({
   library('ggplot2')
   library("BreakpointsData")
 })
-genomes <- OikScrambling:::loadAllGenomes()
+genomes <- OikScrambling:::loadAllGenomes(compat = F)
 load("BreakPoints.Rdata")
-reps <- OikScrambling:::loadAllRepeats()
-transcripts <- OikScrambling:::loadAllTranscriptsGR()
+reps <- OikScrambling:::loadAllRepeats(compat = F)
+transcripts <- OikScrambling:::loadAllTranscriptsGR(compat = F)
 ```
 
 # Purpose
@@ -68,8 +68,8 @@ inverted tandem.  You can see them in the alignment below, of the left-side
 boundary of the unaligned region to the reverse-complement of its right side.
 
 ```{r ROI_breaks_pair_align}
-pairwiseAlignment(getSeq(genomes$Kum, cleanGaps(ROI1$query) |> flank(20, both = T, start = T)),
-                  getSeq(genomes$Kum, cleanGaps(ROI1$query) |> flank(20, both = T, start = F)) |> reverseComplement(),
+pairwiseAlignment(getSeq(genomes$KUM.M3.7f, cleanGaps(ROI1$query) |> flank(20, both = T, start = T)),
+                  getSeq(genomes$KUM.M3.7f, cleanGaps(ROI1$query) |> flank(20, both = T, start = F)) |> reverseComplement(),
                   type="global") |> writePairwiseAlignments()
 ```
 
@@ -77,8 +77,8 @@ pairwiseAlignment(getSeq(genomes$Kum, cleanGaps(ROI1$query) |> flank(20, both = 
 <summary>Click here to see the full pairwise alignment between the Kume insert
 and its own reverse-complement.</summary>
 ```{r ROI_pair_align}
-pairwiseAlignment(getSeq(genomes$Kum, cleanGaps(ROI1$query)),
-                  getSeq(genomes$Kum, cleanGaps(ROI1$query)) |> reverseComplement(),
+pairwiseAlignment(getSeq(genomes$KUM.M3.7f, cleanGaps(ROI1$query)),
+                  getSeq(genomes$KUM.M3.7f, cleanGaps(ROI1$query)) |> reverseComplement(),
                   type="global") |> writePairwiseAlignments()
 ```
 </details>
@@ -88,8 +88,8 @@ the Okinawan genome, it is present as a single copy.  You can see it in the
 alignment below, where the right-side boundary was not reverse-complemented.
 
 ```{r ROI_breaks_pair_align2}
-pairwiseAlignment(getSeq(genomes$Kum, cleanGaps(ROI1$query) |> flank(20, both = T, start = T)),
-                  getSeq(genomes$Kum, cleanGaps(ROI1$query) |> flank(20, both = T, start = F)),
+pairwiseAlignment(getSeq(genomes$KUM.M3.7f, cleanGaps(ROI1$query) |> flank(20, both = T, start = T)),
+                  getSeq(genomes$KUM.M3.7f, cleanGaps(ROI1$query) |> flank(20, both = T, start = F)),
                   type="global") |> writePairwiseAlignments()
 ```
 
@@ -99,9 +99,9 @@ right arms of the Kume alignments and their match to the Okinawa genome.
 ```{r ROI_breaks_pair_align3}
 # Note that genome alignment is +/- therefore the order below is counter-intuitive.
 list(
-  kum_right = getSeq(genomes$Kum, ROI1$query[1] |> flank(20, both = T, start = T))[[1]],
-  kum_left  = getSeq(genomes$Kum, ROI1$query[2] |> flank(20, both = T, start = F))[[1]],
-  oki       = getSeq(genomes$Oki, ROI1[2] |> flank(20, both = T, start = F))[[1]]
+  kum_right = getSeq(genomes$KUM.M3.7f, ROI1$query[1] |> flank(20, both = T, start = T))[[1]],
+  kum_left  = getSeq(genomes$KUM.M3.7f, ROI1$query[2] |> flank(20, both = T, start = F))[[1]],
+  oki       = getSeq(genomes$OKI2018.I69, ROI1[2] |> flank(20, both = T, start = F))[[1]]
 ) |> as("DNAStringSet") |> msa::msaClustalW()
 ```
 
@@ -139,13 +139,13 @@ gb <- unalMap$Oki_Kum |> plyranges::filter(width == 2)
 gb$query |> width() |> summary()
 
 alignFlank <- function(gb)
-  pairwiseAlignment(getSeq(genomes$Kum, gb$query |> flank(20, both = T, start = T)),
-                    getSeq(genomes$Kum, gb$query |> flank(20, both = T, start = F)),
+  pairwiseAlignment(getSeq(genomes$KUM.M3.7f, gb$query |> flank(20, both = T, start = T)),
+                    getSeq(genomes$KUM.M3.7f, gb$query |> flank(20, both = T, start = F)),
                     type="global") |> writePairwiseAlignments()
 
 alignFlank(gb[4])
 
-alignFlank2 <- function(gb, qGenome=genomes$Kum, n = 8) {
+alignFlank2 <- function(gb, qGenome=genomes$KUM.M3.7f, n = 8) {
   # Remove 1-bp padding
   gb$query <- gb$query -1
   pairwiseAlignment(getSeq(qGenome, gb$query |> resize(n, fix = "start")),
@@ -154,7 +154,7 @@ alignFlank2 <- function(gb, qGenome=genomes$Kum, n = 8) {
 }
 alignFlank2(gb[4])
 
-msAlignFlank <- function(gb, tGenome = genomes$Oki, qGenome=genomes$Kum)
+msAlignFlank <- function(gb, tGenome = genomes$OKI2018.I69, qGenome=genomes$KUM.M3.7f)
 list(
   kum_left  = getSeq(qGenome, gb$query |> flank(20, both = T, start = T))[[1]],
   oki_left  = getSeq(tGenome, gb       |> flank(20, both = T, start = F))[[1]],
@@ -204,12 +204,12 @@ ROI4_1 <- x[1]
 gbs$Oki_Osa |> subsetByOverlaps(ROI4_1) |> as.data.frame()
 gbs$Oki_Osa |> subsetByOverlaps(ROI4_1) |> range()
 # We confirm that unalmap regions can not be mapped
-pairwiseAlignment(genomes$Oki$chr1[552335:552383], genomes$Osa$Chr1[1730795:1731145], type="global") |> writePairwiseAlignments()
-pairwiseAlignment(genomes$Oki$chr1[552335:552383], genomes$Osa$Chr1[1730795:1731145] |> reverseComplement(), type="global") |> writePairwiseAlignments()
+pairwiseAlignment(genomes$OKI2018.I69$chr1[552335:552383], genomes$OSKA2016v1.9$Chr1[1730795:1731145], type="global") |> writePairwiseAlignments()
+pairwiseAlignment(genomes$OKI2018.I69$chr1[552335:552383], genomes$OSKA2016v1.9$Chr1[1730795:1731145] |> reverseComplement(), type="global") |> writePairwiseAlignments()
 # We confirm that flanking regions map well
-pairwiseAlignment(genomes$Oki$chr1[551988:552647], genomes$Osa$Chr1[1730510:1731548] |> reverseComplement(), type="global") |> writePairwiseAlignments()
+pairwiseAlignment(genomes$OKI2018.I69$chr1[551988:552647], genomes$OSKA2016v1.9$Chr1[1730510:1731548] |> reverseComplement(), type="global") |> writePairwiseAlignments()
 # Only one hit
-#vmatchPattern(genomes$Osa$Chr1[1730795:1731145], genomes$Osa, with.indels = TRUE, max.mismatch = 10)
+#vmatchPattern(genomes$OSKA2016v1.9$Chr1[1730795:1731145], genomes$OSKA2016v1.9, with.indels = TRUE, max.mismatch = 10)
 ```
 
 ## FALSE/FALSE
@@ -217,19 +217,19 @@ pairwiseAlignment(genomes$Oki$chr1[551988:552647], genomes$Osa$Chr1[1730510:1731
 ```{r ROI4_2}
 ROI4_2 <- x[5]
 # As character for convenience of BLAST searching.
-genomes$Oki$chr1[554365:554546]   |> as.character()  # Only one perfect BLAST hit at the NCBI, to the Oki genome.
-genomes$Osa$Chr1[1727927:1728109] |> as.character()  # No relevant BLAST hit at the NCBI (evalues >= 1e-4)
+genomes$OKI2018.I69$chr1[554365:554546]   |> as.character()  # Only one perfect BLAST hit at the NCBI, to the Oki genome.
+genomes$OSKA2016v1.9$Chr1[1727927:1728109] |> as.character()  # No relevant BLAST hit at the NCBI (evalues >= 1e-4)
 
-vmatchPattern(genomes$Oki$chr1[554365:554546], genomes$Oki)
+vmatchPattern(genomes$OKI2018.I69$chr1[554365:554546], genomes$OKI2018.I69)
 
 # unaligned mapped region (+ / -)
-pairwiseAlignment(genomes$Oki$chr1[554365:554546], genomes$Osa$Chr1[1727927:1728109]                       , type="global") |> writePairwiseAlignments()
-pairwiseAlignment(genomes$Oki$chr1[554365:554546], genomes$Osa$Chr1[1727927:1728109] |> reverseComplement(), type="global") |> writePairwiseAlignments()
+pairwiseAlignment(genomes$OKI2018.I69$chr1[554365:554546], genomes$OSKA2016v1.9$Chr1[1727927:1728109]                       , type="global") |> writePairwiseAlignments()
+pairwiseAlignment(genomes$OKI2018.I69$chr1[554365:554546], genomes$OSKA2016v1.9$Chr1[1727927:1728109] |> reverseComplement(), type="global") |> writePairwiseAlignments()
 # Identity of ~50% but no striking difference between strands
 
 # unaligned mapped region with flanking colinear alignments.
 gbs$Oki_Osa |> subsetByOverlaps(ROI4_2)
-pairwiseAlignment(genomes$Oki$chr1[554168:554692], genomes$Osa$Chr1[1727781:1728321] |> reverseComplement(), type="global") |> writePairwiseAlignments()
+pairwiseAlignment(genomes$OKI2018.I69$chr1[554168:554692], genomes$OSKA2016v1.9$Chr1[1727781:1728321] |> reverseComplement(), type="global") |> writePairwiseAlignments()
 ```
 
 ## TRUE/TRUE
@@ -239,16 +239,16 @@ ROI4_3 <- x[12]
 ROI4_3 |> data.frame()
 
 # As character for convenience of BLAST searching.
-genomes$Oki$chr1[561646:562124]   |> as.character()  # Only one perfect BLAST hit at the NCBI, to the Oki genome.
-genomes$Osa$Chr1[1722712:1723220] |> as.character()  # No relevant BLAST hit at the NCBI (evalues >= 1e-4)
+genomes$OKI2018.I69$chr1[561646:562124]   |> as.character()  # Only one perfect BLAST hit at the NCBI, to the Oki genome.
+genomes$OSKA2016v1.9$Chr1[1722712:1723220] |> as.character()  # No relevant BLAST hit at the NCBI (evalues >= 1e-4)
 
 # unaligned mapped region (+ / -)
-pairwiseAlignment(genomes$Oki$chr1[561646:562124], genomes$Osa$Chr1[1722712:1723220]                       , type="global") |> writePairwiseAlignments()
-pairwiseAlignment(genomes$Oki$chr1[561646:562124], genomes$Osa$Chr1[1722712:1723220] |> reverseComplement(), type="global") |> writePairwiseAlignments()
+pairwiseAlignment(genomes$OKI2018.I69$chr1[561646:562124], genomes$OSKA2016v1.9$Chr1[1722712:1723220]                       , type="global") |> writePairwiseAlignments()
+pairwiseAlignment(genomes$OKI2018.I69$chr1[561646:562124], genomes$OSKA2016v1.9$Chr1[1722712:1723220] |> reverseComplement(), type="global") |> writePairwiseAlignments()
 
 # unaligned mapped region with flanking colinear alignments.
 gbs$Oki_Osa |> subsetByOverlaps(ROI4_3)
-pairwiseAlignment(genomes$Oki$chr1[561142:563743], genomes$Osa$Chr1[1720807:1723727] |> reverseComplement(), type="global") |> writePairwiseAlignments()
+pairwiseAlignment(genomes$OKI2018.I69$chr1[561142:563743], genomes$OSKA2016v1.9$Chr1[1720807:1723727] |> reverseComplement(), type="global") |> writePairwiseAlignments()
 ```
 
 
@@ -264,14 +264,14 @@ ROI7[35:45] |> as.data.frame()
 ROI7[37:43] |> plotApairOfChrs()
 
 ## Annotations
-ROI7.reps <- reps$Oki |> subsetByOverlaps(ROI7[37:43] |> range())
+ROI7.reps <- reps$OKI2018.I69 |> subsetByOverlaps(ROI7[37:43] |> range())
 mids <- ROI7.reps |> gr2dna_seg() |> dplyr::mutate(mid = (start + end) / 2) |> dplyr::pull(mid)
 text <- ROI7.reps$Class |> as.character()
 annot <- genoPlotR::annotation(x1=mids, text=text, rot=30)
 ROI7[37:43] |> plotApairOfChrs(annotations = annot)
 
 ## Genes
-ROI7.genes <- transcripts$Oki |> subsetByOverlaps(ROI7[37:43] |> range())
+ROI7.genes <- transcripts$OKI2018.I69 |> subsetByOverlaps(ROI7[37:43] |> range())
 mids <- ROI7.genes |> gr2dna_seg() |> dplyr::mutate(mid = (start + end) / 2) |> dplyr::pull(mid)
 text <- ROI7.genes$tx_name |> as.character()
 annot <- genoPlotR::annotation(x1=start(ROI7.genes), x2=end(ROI7.genes), text=text, rot=30)
@@ -401,20 +401,20 @@ library(ggmsa)
 x <- coa$Oki_Osa |> plyranges::filter(width < 600) |> sort(i=T)
 
 roi <- x[4]
-getSeq(genomes$Oki, roi)
+getSeq(genomes$OKI2018.I69, roi)
 
-pairwiseAlignment(getSeq(genomes$Oki, roi + 100),
-                  getSeq(genomes$Osa, roi$query + 100),
+pairwiseAlignment(getSeq(genomes$OKI2018.I69, roi + 100),
+                  getSeq(genomes$OSKA2016v1.9, roi$query + 100),
                   type = "global") |> writePairwiseAlignments()
 
 roi <- x[10]
-getSeq(genomes$Oki, roi)       |> as.character()
-getSeq(genomes$Osa, roi$query) |> as.character()
+getSeq(genomes$OKI2018.I69, roi)       |> as.character()
+getSeq(genomes$OSKA2016v1.9, roi$query) |> as.character()
 
 
 seqs <- c(
-  subsetByOverlaps(coa$Oki_Osa, granges(roi))                             |> getSeq(x=genomes$Oki),
-  subsetByOverlaps(coa$Oki_Osa, granges(roi))$query                       |> getSeq(x=genomes$Osa),
+  subsetByOverlaps(coa$Oki_Osa, granges(roi))                             |> getSeq(x=genomes$OKI2018.I69),
+  subsetByOverlaps(coa$Oki_Osa, granges(roi))$query                       |> getSeq(x=genomes$OSKA2016v1.9),
   subsetByOverlaps(coa$Oki_Aom, granges(roi), ignore.strand = TRUE)$query |> getSeq(x=genomes$Aom) |> reverseComplement(),
   subsetByOverlaps(coa$Oki_Bar, granges(roi))$query                       |> getSeq(x=genomes$Bar),
   subsetByOverlaps(coa$Oki_Nor, granges(roi))$query                       |> getSeq(x=genomes$Nor)
@@ -435,8 +435,8 @@ ggmsa::ggmsa(seqs_aln, 201, 250, seq_name = TRUE)
 ```{r ROI11_2, fig.height=12, fig.width=9}
 roi <- x[11]
 seqs <- c(
-  subsetByOverlaps(coa$Oki_Osa, granges(roi))                             |> getSeq(x=genomes$Oki),
-  subsetByOverlaps(coa$Oki_Osa, granges(roi))$query                       |> getSeq(x=genomes$Osa),
+  subsetByOverlaps(coa$Oki_Osa, granges(roi))                             |> getSeq(x=genomes$OKI2018.I69),
+  subsetByOverlaps(coa$Oki_Osa, granges(roi))$query                       |> getSeq(x=genomes$OSKA2016v1.9),
   subsetByOverlaps(coa$Oki_Aom, granges(roi), ignore.strand = TRUE)$query |> getSeq(x=genomes$Aom) |> reverseComplement(),
   subsetByOverlaps(coa$Oki_Bar, granges(roi))$query                       |> getSeq(x=genomes$Bar),
   subsetByOverlaps(coa$Oki_Nor, granges(roi))$query                       |> getSeq(x=genomes$Nor)
