Complete the unbreaking of PWM.Rmd

--- a/vignettes/PWM.Rmd
+++ b/vignettes/PWM.Rmd
@@ -243,10 +243,10 @@ gadems.invLeftGap$Oki_Osa[[1]]@consensus
 
 pwmHits <- sapply(genomes, matchPWM, pwm = pwm)
 sapply(pwmHits, length)
-hist(pwmHits$Oki$score)
-hist(pwmHits$Osa$score)
+hist(pwmHits$OKI2018.I69$score)
+hist(pwmHits$OSKA2016v1.9$score)
 
-pwmHit <- pwmHits$Oki
+pwmHit <- pwmHits$OKI2018.I69
 
 library("Gviz")
 options(ucscChromosomeNames=FALSE)
