--- a/vignettes/Translocations.Rmd
+++ b/vignettes/Translocations.Rmd
@@ -35,15 +35,25 @@ load("BreakPoints.Rdata")
 See `vignette("LoadGenomicBreaks", package = "OikScrambling")` for how the
 different GBreaks objects are prepared.
 
-# Translocations
-
-## Documentation
+# Documentation
 
 Details can be found in `vignette("GenomicBreaks", package = "GenomicBreaks")`,
 in `vignette("StructuralVariants", package = "GenomicBreaks")`,
 and `?GenomicBreaks::flagTranslocations`
 
-## Number of translocations
+# A couple of examples
+
+The block in blue sky color map on the same sequence as their neighbors, but
+not colinearly.  The span of unaligned regions between them varies greatly.
+
+```{r show_some_translocations}
+showTranslocations(coa$Oki_Kum |> flagTranslocations()) -> x
+plotApairOfChrs(x[1:3] |> swap() |> sort(i=T))
+plotApairOfChrs(x[4:6])
+plotApairOfChrs(x[7:9])
+```
+
+# Number of translocations
 
 Notes:
 
@@ -84,7 +94,7 @@ translocated region itself may have a double gap interrupting the alignment.
 Then, it logically decreases when the repeat-associated translocations are
 removed.
 
-## Small translocations
+# Small translocations
 
 Translocations are "small" when the flanking colinear regions are longer.
 
