Reduce startup messages

--- a/vignettes/TandemSiteDuplications.Rmd
+++ b/vignettes/TandemSiteDuplications.Rmd
@@ -25,6 +25,7 @@ suppressPackageStartupMessages({
   library('GenomicBreaks')
   library('ggplot2')
   library("BreakpointsData")
+  library("Biostrings")
 })
 genomes <- OikScrambling:::loadAllGenomes(compat = F)
 load("BreakPoints.Rdata")
