--- a/vignettes/PWM.Rmd
+++ b/vignettes/PWM.Rmd
@@ -13,7 +13,7 @@ editor_options:
 ---
 
 ```{r setup}
-knitr::opts_chunk$set(cache = TRUE, include = FALSE)
+knitr::opts_chunk$set(cache = TRUE)
 knitr::opts_knit$set(verbose = TRUE)
 ```
 
